--- a/hawc/apps/summary/templates/summary/visual_detail_prisma.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_prisma.html
@@ -22,12 +22,14 @@
 
 {% block extrajs %}
   {{ config|json_script:"config" }}
+  {{ options|json_script:"options" }}
   <script type="text/javascript">
     window.app.startup("summaryStartup", function(summary){
       window.isEditable = {{obj_perms.edit|lower}};
       const config = JSON.parse(document.getElementById('config').textContent),
+            options = JSON.parse(document.getElementById('options').textContent),
             el = document.getElementById('visualization');
-      summary.startupPrismaAppRender(el, config.settings, config.data, {});
+      summary.startupPrismaAppRender(el, config.settings, config.data, options);
     });
   </script>
 {% endblock %}
