Implement prisma diagram visual (#1105)
* adds initial classes and functions to fill in with prisma plot

* wip

* initial data store

* fix typo

* fix imports

* wip add test viz

* temp fix errors to get visual to load

* test d3 plot

* wip sections

* WIP fix section titles

* more formatting and add initial boxes

* improve placement of sections and boxes

* ICF spec

* WIP add all functions from spec

* names for variables

* render everything but arrows

* add d3 arrows and fix error when rendering arrows

* use keys instead of labels to prevent collisions

* match internal field names

* set allowed arrow types

* fix arrow type call

* format and add toolbar

* add box layouts to form

* add get transformed settings

* add comments

* rebuild lock file?

* get lint to pass

* add color pickers to forms

* Add fields for text style/formatting

* refactor visual startup

* nest styling settings to make transform easier

* change defaults to match

* Only show proper type of boxes to link with for cards and lists

* format

* fix nodeOnClick function

* add sections to arrow src/dst options

* link sections

* format

* allow select input to pass label on handleSelect

* save display names for linked objects

* cleanup defaults

* refactor viz

* set default global styles

* cast to int

* remove tag_display; it can be calculated

* fix single/multiple

* remove section_display

* update boxes

* map labels instead of saving in state

* start enabling arrows

* Add counts

* Update tag map to take into account descendant tags

* Toggle style options for sections

* toggle styles on all forms

* remove getBoxOptions

* remove imports

* missing imports

* fix arrow table

* plot updates

* add list items

* add to global settings

* Updated docs, cleanup

* fix

* remove list and card tables

* add up/down arrows

* preserve style o

--- a/hawc/apps/summary/templates/summary/visual_detail_prisma.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_prisma.html
@@ -16,15 +16,18 @@
       {% endactions %}
     {% endif %}
   </div>
-  <div class='visualization'></div>
+  <div id='visualization'></div>
   <p>{{object.caption|safe}}</p>
 {% endblock %}
 
 {% block extrajs %}
+  {{ config|json_script:"config" }}
   <script type="text/javascript">
     window.app.startup("summaryStartup", function(summary){
       window.isEditable = {{obj_perms.edit|lower}};
-      summary.Visual.displayAsPage({{object.id}}, $(".visualization"));
+      const config = JSON.parse(document.getElementById('config').textContent),
+            el = document.getElementById('visualization');
+      summary.startupPrismaAppRender(el, config.settings, config.data, {csrf: "{{ csrf_token }}"});
     });
   </script>
 {% endblock %}
