Refactor Prisma data fetch (#1126)
* adjust naming for Prisma constructors

* add new api endpoint

* get prisma data from url

* use new api url in Prisma store

* lint

* schema for visual config

* simplify schema

* two api endpoints

* test

* fix test

* broken; wip

* updates

* return proper json

* throw error if bad state

* add ordering

* refactoring

* move csrf to common

---------

Co-authored-by: Andy Shapiro <shapiro.andy@epa.gov>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -45,7 +45,7 @@
       "initial_data": {{initial_data|safe}},
       "api_heatmap_datasets": "{{form.instance.get_api_heatmap_datasets}}",
       "clear_cache_url": "{{assessment.get_clear_cache_url}}"
-      {% if prisma_data %},"prisma_data": {{prisma_data|safe}}{% endif %}
+      {% if api_data_url %},"api_data_url": "{{api_data_url|safe}}"{% endif %}
     }
   </script>
   <script type="text/javascript">
